# QueensCorsarBot

./: .gitignore  Cargo.toml  restart.fish  start.fish  stop.fish
src/: commands.rs  handler.rs  logger.rs  main.rs  prelude.rs  utility.rs
src/core/: application.rs  mod.rs
