[package]
name = "queens_corsar"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
nanoid = "0.4.0"
chrono = "0.4.22"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.qcproto]
git = "https://github.com/AlterEigo/QCProto.git"
branch = "master"
version = "0.2.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "rustls_backend",
  "utils",
  "collector"
]
